Update oops-notes.md
Adding notes on permGen vs Metaspace